<resources>
    <string name="app_name">CRM</string>
    <string name="user_fragment">这是User Fragment</string>
    <string name="add_user_fragment">这是Add User Fragment</string>
    <string name="user_settings_fragment">这是User Settings Fragment</string>
    <string name="user">用户</string>
    <string name="add_user">新增</string>
    <string name="user_settings">高级</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="dialog_username">用户姓名: </string>
    <string name="dialog_number">联系方式: </string>
    <string name="dialog_address">家庭地址: </string>
    <string name="dialog_sex">用户性别: </string>
    <string name="dialog_date">添加日期: </string>
    <string name="userinfo">用户信息</string>
    <string name="userlist">用户列表</string>
    <string name="adduser">添加用户</string>
    <string name="edit">编辑</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
</resources>
