<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_lightest"
    tools:context=".activity.MainActivity" >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" >
    </androidx.viewpager.widget.ViewPager>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/user"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="@string/user"/>

        <RadioButton
            android:id="@+id/add_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/add_user"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="@string/add_user"/>

        <RadioButton
            android:id="@+id/user_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/user_settings"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:text="@string/user_settings" />
    </RadioGroup>
</LinearLayout>